--- a/Client/index.html
+++ b/Client/index.html
@@ -5,17 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>hamton-goal-predictor</title>
-  <meta name="description" content="Lovable Generated Project" />
-  <meta name="author" content="Lovable" />
+  <meta name="description" content="SK Ham Coding Center" />
+  <meta name="author" content="SK Ham" />
 
-  <meta property="og:title" content="Lovable Generated Project" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:title" content="SK Ham Coding Center" />
+  <meta property="og:description" content="SK Ham Coding Center" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   <!-- logooooo -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
